[project]
name = "handsonmachinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "asttokens==3.0.0",
    "build==1.2.2.post1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "distlib==0.3.9",
    "docutils==0.21.2",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fonttools==4.56.0",
    "graphviz==0.20.3",
    "id==1.5.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jedi==0.19.2",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "keyring==25.6.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "nest-asyncio==1.6.0",
    "nh3==0.2.21",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pefile==2023.2.7",
    "pillow==11.1.0",
    "pip==25.1.1",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyinstaller==6.13.0",
    "pyinstaller-hooks-contrib==2025.4",
    "pyparsing==3.2.1",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyzmq==26.3.0",
    "readme-renderer==44.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==80.3.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "streamlit>=1.51.0",
    "tensorflow-intel==0.0.1",
    "threadpoolctl==3.6.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "twine==6.1.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "virtualenv==20.31.2",
    "wcwidth==0.2.13",
    "xgboost==3.0.0",
]

[tool.uv.workspace]
members = [
    "Test_Env",
]
